--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
+    "start":"node app.js",
+    "dev":"nodemon app.js",
     "test:file": "jest  --runInBand -t"
   },
   "keywords": [
@@ -14,9 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
+    "express": "^4.17.3",
     "faker": "^5.5.3",
     "jest": "^27.4.5",
-    "supertest": "^6.1.6"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   },
   "jest": {
     "testEnvironment": "jsdom"
